# rpp

./: .gitignore  build_windows-folder.spec  build_windows.spec  main.py  package-lock.json  package.json  pyproject.toml  spec.py
.github/workflows/: build.yml
app/: api.py  crud.py  db.py  models.py  schemas.py
build_plugin/: config.py
build_plugin/dmg/: dmg.py  get_dmg.py
build_plugin/exe/: InnoSetup.iss  get_app_issid.py  get_iss.py
hooks/: hook-hmdriver2.py
static/: app.icns
view/: index.html  package-lock.json  package.json  tsconfig.app.json
view/assets/: index-DoWBm3rp.css  index-DrqgrBxD.js
view/src/: App.tsx  index.css
view/src/components/: Performance.tsx
